# thesis

./: .gitignore  .pre-commit-config.yaml  LICENSE  code-security-scan.yml  pyproject.toml
.github/workflows/: code-size-check.yml  deadlink-checker.yml  lint-format.yml
src/data/: analyse.py  data_config.py  dataset.py  main.py  prepare.py  rename_images.py
src/data_manager/: analyse.py  rename_images.py
src/models/ViT/: ViT.py  ViT_config.py  train.py
src/models_/CNNs/: VGG19.py  inceptionV3.py  networks.py  train_inceptionv3.py  train_vgg19.py  vgg19.py
src/models_/ViT/: ViT.py  ViT_config.py  testdata.py  train.py
src/models_/features/: attention.py  extract_features.py  extract_features_and_combine.py  extractor.py  feature_graph.py  features.py  predict.py
