[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["HJacksons <jacksonherberts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
black = "^24.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
